[package]
name = "repat"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
license = "MIT/Apache-2.0"
keywords = ["regex", "patch"]
readme = "README.md"
repository = "https://github.com/taskie/repat"
categories = ["command-line-utilities"]
description = "Creates patch to replace words with regex."
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.45"
clap = "2.33.3"
regex = "1.5.4"
segment-tree = "2.0.0"
similar = "2.1.0"
structopt = "0.3.25"

[[bin]]
name = "repat"
path = "src/main.rs"
